 - (dtucker) [configure.ac openbsd-compat/getrrsetbyname.c] Bug #1299: Use the
   platform's _res if it has one.  Should fix problem of DNSSEC record lookups
   on NetBSD as reported by Curt Sampson.
 - (dtucker) [openbsd-compat/xmmap.c] Include stdlib.h for mkstemp prototype.
 - (dtucker) [configure.ac defines.h] Have configure check for MAXSYMLINKS
   so we don't get redefinition warnings.

20070406
 - (dtucker) [INSTALL] Update the systems that have PAM as standard.  Link
   to OpenPAM too.
 - (dtucker) [INSTALL] prngd lives at sourceforge these days.

20070326
 - (tim) [auth.c configure.ac defines.h session.c openbsd-compat/port-uw.c
   openbsd-compat/port-uw.h openbsd-compat/xcrypt.c] Rework libiaf test/defines
   to account for IRIX having libiaf but not set_id(). Patch with & ok dtucker@

20070325
 - (dtucker) [Makefile.in configure.ac] Replace single-purpose LIBSELINUX,
   LIBWRAP and LIBPAM variables in Makefile with the general-purpose
   SSHDLIBS.  "I like" djm@

20070321
 - (dtucker) OpenBSD CVS Sync
   - dtucker@cvs.openbsd.org 2007/03/09 05:20:06
     [servconf.c sshd.c]
     Move C/R -> kbdint special case to after the defaults have been
     loaded, which makes ChallengeResponse default to yes again.  This
     was broken by the Match changes and not fixed properly subsequently.
     Found by okan at demirmen.com, ok djm@ "please do it" deraadt@
   - djm@cvs.openbsd.org 2007/03/19 01:01:29
     [sshd_config]
     Disable the legacy SSH protocol 1 for new installations via
     a configuration override. In the future, we will change the
     server's default itself so users who need the legacy protocol
     will need to turn it on explicitly
   - dtucker@cvs.openbsd.org 2007/03/19 12:16:42
     [ssh-agent.c]
     Remove the signal handler that checks if the agent's parent process
     has gone away, instead check when the select loop returns.  Record when
     the next key will expire when scanning for expired keys.  Set the select